Loser added in model.xml and Heroes application runs with 2 entities: Hero, Loser

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 node_modules
 bower_components
 /quickstart/app/*.map
-
 /quickstart/app/*.js
 
+quickstart-MetaFactory/src/snippets/java/
+quickstart/app/
