--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 *.iml
 node_modules
 bower_components
-/quickstart/app/*.map
-/quickstart/app/*.js
+*/quickstart/app/*.map
+*/quickstart/app/*.js
 
 quickstart-MetaFactory/src/snippets/java/
-quickstart/app/
+
